@@ -1,3 +1,9 @@
+2006-09-23  Arno Rehn  <arno@arnorehn.de>
+
+	* The signatures for slots and signals are now autogenerated, so it's not necessary
+	  anymore to specify them by hand. It's still possible, though.
+	* The signal signatures are now stored in a Hashtable, too.
+
 2006-09-22  Arno Rehn  <arno@arnorehn.de>
 
 	* The return type of a slot is now being added to the definition in the QMetaObject
